fix: massive refactoring