@@ -4,8 +4,6 @@ import com.netcracker.core.declarative.resources.maas.Maas;
 import com.netcracker.core.declarative.resources.maas.MaasList;
 import com.netcracker.core.declarative.resources.mesh.Mesh;
 import com.netcracker.core.declarative.resources.mesh.MeshList;
-import io.fabric8.kubernetes.api.model.ConfigMap;
-import io.fabric8.kubernetes.api.model.ConfigMapBuilder;
 import io.fabric8.kubernetes.api.model.Secret;
 import io.fabric8.kubernetes.api.model.SecretBuilder;
 import io.fabric8.kubernetes.client.KubernetesClient;
@@ -13,8 +11,7 @@ import io.fabric8.kubernetes.client.dsl.MixedOperation;
 import io.fabric8.kubernetes.client.dsl.Resource;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Base64;
-import java.util.HashMap;
+import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
@@ -39,30 +36,6 @@ public class DeclarativeKubernetesClient {
         return client.resources(Maas.class, MaasList.class);
     }
 
-    public void createOrUpdateConfigMap(String name,
-                                        String namespace,
-                                        String data,
-                                        Map<String, String> labels) {
-        log.info("VLLA createOrUpdateConfigMap data={}", data);
-        ConfigMap cm = new ConfigMapBuilder()
-                .withNewMetadata()
-                    .withName(name)
-                    .withNamespace(namespace)
-                    .withLabels(labels)
-                    .addToAnnotations("app.kubernetes.io/managed-by", "core-operator")
-                .endMetadata()
-                .addToData("compositeStructure", data)
-                .build();
-
-        ConfigMap result = client.configMaps()
-                .inNamespace(namespace)
-                .resource(cm)
-                .fieldManager("core-operator")
-                .serverSideApply();
-
-        log.info("VLLA createOrUpdateConfigMap result = {}", result);
-    }
-
     public void createOrUpdateSecret(String name,
                                      String namespace,
                                      String compositeJson,
@@ -71,7 +44,9 @@ public class DeclarativeKubernetesClient {
         Objects.requireNonNull(namespace, "namespace");
         Objects.requireNonNull(compositeJson, "compositeJson");
 
-        Map<String, String> effectiveLabels = (labels == null) ? Map.of() : labels;
+        log.info("VLLA createOrUpdateSecret name = {}", name);
+
+        Map<String, String> effectiveLabels = (labels == null) ? Collections.emptyMap() : labels;
 
         Secret secret = new SecretBuilder()
                 .withNewMetadata()
@@ -86,17 +61,5 @@ public class DeclarativeKubernetesClient {
         client.secrets()
                 .inNamespace(namespace)
                 .resource(secret).serverSideApply();
-    }
-
-
-    /**
-     * Чтение текущего JSON из секрета. Возвращает null, если секрета или ключа нет.
-     */
-    public String readCompositeJsonOrNull(String name, String namespace) {
-        Secret s = client.secrets().inNamespace(namespace).withName(name).get();
-        if (s == null || s.getData() == null) return null;
-        String b64 = s.getData().get("compositeStructure");
-        if (b64 == null) return null;
-        return new String(Base64.getDecoder().decode(b64));
     }
 }
